snake changed to loop around because i cant figure out the logic #056